--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -6,7 +6,6 @@
     padding: 10px;
     align-items: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.322);
-    gap: 30%;
 }
 
 .img-logo img{
@@ -20,14 +19,57 @@
 }
 
 .nav-item{
+    position: relative;
+    display: block;
     font-weight: 600;
     color: grey;
+    cursor: pointer;
+    padding: 20px 0;
+}
+
+.nav-item a{
+    color: grey;
+    text-decoration: none;
+}
+
+.nav-item ul{
+    display: none;
+    position: absolute;
+    top: 60px;
+    left: -50%;
+    width: 200px;
+    padding: 0;
+    background-color: black;
+    list-style-type: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-item:focus-within > ul{
+    display: flex;
+    flex-direction: column;
+}
+
+.nav-item:hover > ul{
+    display: flex;
+    flex-direction: column;
+}
+
+.nav-item ul li{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 40px;
+    justify-content: center;
+    cursor: pointer;
 }
 
 .head-link{
+    position: absolute;
+    right: 5%;
     display: flex;
     align-items: center;
-    gap: 4rem;
+    gap: 5rem;
 }
 
 .drop-down{
@@ -60,4 +102,65 @@
 
 .arrow{
     cursor: pointer;
+}
+
+.hamburger{
+    display: none;
+    cursor: pointer;
+}
+
+.bar{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: black;
+}
+
+@media(max-width:990px) {
+    .hamburger{
+        display: block;
+    }
+
+    .hamburger.actived .bar:nth-child(2){
+        opacity: 0;
+    }
+    .hamburger.actived .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hamburger.actived .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .nav-ul{
+        position: fixed;
+        flex-direction: column;
+        left: -300%;
+        top: 10%;
+        width: 200px;
+        height: 90%;
+        text-align: left;
+        transition: 0.3s;
+        background-color: white;
+        padding: 30px;
+        z-index: 10;
+    }
+
+    .nav-ul.actived{
+        left: 0%;
+    }
+
+    .nav-item{
+        padding: 0;
+        height: auto;
+    }
+
+    .nav-item ul{
+        position: relative;
+        top: 3px;
+        left: 30px;
+        width: 100%;
+    }
 }
