--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,11 +1,13 @@
 .navbar{
     display: flex;
     position: fixed;
+    top: 0;
     height: 10%;
     width: 100%;
     padding: 10px;
     align-items: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.322);
+    z-index: 9;
 }
 
 .img-logo img{
@@ -18,7 +20,7 @@
     gap: 30px;
 }
 
-.nav-item{
+.nav-ul li{
     position: relative;
     display: block;
     font-weight: 600;
@@ -27,35 +29,76 @@
     padding: 20px 0;
 }
 
-.nav-item a{
+.nav-ul li a{
     color: grey;
     text-decoration: none;
 }
 
-.nav-item ul{
+.nav-ul li ul{
     display: none;
     position: absolute;
     top: 60px;
     left: -50%;
     width: 200px;
     padding: 0;
-    background-color: black;
+    background-color: white;
+    border-radius: 5px;
     list-style-type: none;
     justify-content: center;
     align-items: center;
 }
 
-.nav-item:focus-within > ul{
+.nav-ul li ul .linkin{
+    padding: 0;
+}
+
+.nav-ul li ul .ul-brand{
+    display: block;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    width: 100%;
+    height: 5px;
+    background-color: orange;
+}
+
+.drop-link{
+    display: none;
+}
+
+.nav-item{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.nav-item:hover{
+    color: orange;
+}
+
+.active .nav-item{
+    color: orange;
+}
+
+.nav-item:hover .span-link{
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: orange;
+}
+
+.active .nav-item .span-link{
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: orange;
+}
+
+.nav-ul li:hover > ul{
     display: flex;
     flex-direction: column;
 }
 
-.nav-item:hover > ul{
-    display: flex;
-    flex-direction: column;
-}
-
-.nav-item ul li{
+.nav-ul li ul li{
     display: flex;
     align-items: center;
     width: 100%;
@@ -152,15 +195,50 @@
         left: 0%;
     }
 
-    .nav-item{
+    .nav-ul li{
         padding: 0;
         height: auto;
     }
 
-    .nav-item ul{
+    .nav-ul li:focus-within > ul{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .nav-ul li ul{
         position: relative;
         top: 3px;
         left: 30px;
         width: 100%;
+    }
+
+    .nav-ul li ul .ul-brand{
+        display: none;
+    }
+
+    .active .nav-item .span-link{
+        display: none;
+    }
+
+    .active .nav-item{
+        color: orange;
+    }
+
+    .nav-item:hover .span-link{
+        display: none;
+    }
+
+    .nav-ul li ul{
+        padding: 0;
+    }
+
+    .drop-link{
+        display: initial;
+    }
+
+    .nav-item{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
 }
